--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGODB_URL = mongodb+srv://ak20040727:Harsh9528@cluster0.vy8z4uq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-SECRET_KEY = SECRET_KEY
+MONGODB_URL = mongodb+srv://ak20040727:oOzGdtZEecClZxmK@cluster0.paarwzw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+SECRET_KEY = myOnlineJudgeSecretKey952894957
 port = 5000
