--- a/compiler-service/Dockerfile
+++ b/compiler-service/Dockerfile
@@ -1,7 +1,13 @@
 FROM node:22-alpine
 WORKDIR /app
+
 RUN apk update && apk add --no-cache g++ openjdk21 python3 py3-pip
+
+COPY package*.json ./
+RUN npm ci --only=production
+
 COPY . .
-RUN npm install
-EXPOSE 8000
-CMD ["node","index.js"]
+
+EXPOSE 8080
+
+CMD ["npm", "start"]
